[project]
name = "gmaps-api-scanner-web"
version = "0.1.0"
description = "FastAPI web app to test Google Maps API keys for exploitable endpoints"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]
